--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "dotenv": "^16.4.5",
     "openai": "^4.65.0"
   },
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "eslint": "^9.11.1",
+    "globals": "^15.10.0"
+  }
 }
