--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "overide",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "This is a CLI based Code Generation Tool.",
-  "main": "index.js",
+  "main": "bin/index.js",
   "bin": {
-    "oi": "index.js"
+    "oi": "bin/index.js"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node bin/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abhijeet Dash",
-  "license": "ISC",
+  "license": "GPL-2.0",
   "dependencies": {
     "axios": "^1.7.7",
     "chokidar": "^4.0.0",
@@ -27,10 +27,8 @@
     "globals": "^15.10.0"
   },
   "files": [
-    "commands",
-    "core",
-    "helpers",
-    "index.js",
-    "oi-config.json"
+    "assets",
+    "bin",
+    "core"
   ]
 }
