--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "axios": "^1.7.7",
     "chokidar": "^4.0.0",
     "commander": "^12.1.0",
+    "diff": "^7.0.0",
     "dotenv": "^16.4.5",
+    "fuzzball": "^2.1.3",
+    "fuzzy": "^0.1.3",
     "inquirer": "^11.1.0",
     "openai": "^4.67.2"
   },
