--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "fuzzball": "^2.1.3",
+    "groq-sdk": "^0.7.0",
     "inquirer": "^11.1.0",
     "openai": "^4.67.2"
   },
