--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "pnpm": "pnpm",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:check": "eslint \"src/**/*.ts\"",
+    "lint:fix": "eslint \"src/**/*.ts\" --fix"
   },
   "author": "Abhijeet Dash",
   "license": "GPL-2.0",
@@ -26,9 +27,14 @@
   "type": "commonjs",
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "eslint": "^9.11.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.10.0",
-    "pnpm": "^9.12.2"
+    "pnpm": "^9.12.2",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   },
   "files": [
     "assets",
