--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "pnpm": "pnpm",
+    "build": "tsup",
     "start": "node dist/index.js",
     "lint:check": "eslint \"src/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.ts\" --fix"
@@ -34,6 +35,7 @@
     "globals": "^15.10.0",
     "pnpm": "^9.12.2",
     "prettier": "^3.3.3",
+    "tsup": "^8.3.5",
     "typescript": "^5.6.3"
   },
   "files": [
