update: package.json
Adds appropriate link to git oi, better build, versioning script, and introduces changeset.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a CLI based Code Generation Tool.",
   "type": "commonjs",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "bin": {
     "overide": "dist/index.js"
   },
@@ -12,13 +13,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup ./src/index.ts",
+    "build": "tsup ./src/index.ts --format cjs,esm",
     "dev": "tsup ./src/index.ts --watch",
     "lint:check": "eslint \"src/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.ts\" --fix",
     "overide": "node dist/index.js",
-    "version": "npm run build && git add -A dist",
-    "postversion": "git push && git push --tags"
+    "release": "pnpm build && changeset publish"
   },
   "author": "Abhijeet Dash",
   "license": "GPL-2.0",
@@ -33,6 +33,7 @@
     "openai": "^4.67.2"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.9",
     "@eslint/js": "^9.11.1",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
@@ -42,5 +43,12 @@
     "prettier": "^3.3.3",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oi-overide/oi.git"
   }
 }
