--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,15 +26,9 @@ jobs:
         with:
           node-version: 20.x
           cache: "pnpm"
-
-      - name: Check pnpm-lock.yaml
-        run: |
-          if [ ! -f "pnpm-lock.yaml" ]; then
-            echo "Error: pnpm-lock.yaml is missing"
-            exit 1
-          fi
-
-      - run: pnpm install --frozen-lockfile
+					
+      - name: Install dependencies
+        run: pnpm install --no-frozen-lockfile
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
