--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup ./src/index.ts",
-    "dev": "tsup ./src/index.ts --watch",
+    "build": "tsup ./src",
+    "dev": "tsup ./src --watch",
     "lint:check": "eslint \"src/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.ts\" --fix",
     "overide": "node dist/index.js",
@@ -30,7 +30,17 @@
     "fuzzball": "^2.1.3",
     "groq-sdk": "^0.7.0",
     "inquirer": "^11.1.0",
-    "openai": "^4.67.2"
+    "openai": "^4.67.2",
+    "tree-sitter": "^0.22.0",
+    "tree-sitter-c": "^0.23.1",
+    "tree-sitter-c-sharp": "^0.23.0",
+    "tree-sitter-cpp": "^0.23.1",
+    "tree-sitter-go": "^0.23.1",
+    "tree-sitter-java": "^0.23.2",
+    "tree-sitter-javascript": "^0.23.0",
+    "tree-sitter-python": "^0.23.2",
+    "tree-sitter-ruby": "^0.23.0",
+    "tree-sitter-typescript": "^0.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
