--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.10.0",
     "prettier": "^3.3.3",
-    "tsup": "^8.3.5",
-    "typescript": "^5.6.3"
+    "tsup": "^8.3.5"
   },
   "publishConfig": {
     "access": "public"
