--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chokidar": "^4.0.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "fast-cosine-similarity": "^1.2.2",
     "fuzzball": "^2.1.3",
     "groq-sdk": "^0.7.0",
     "inquirer": "^11.1.0",
