--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,15 +16,19 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - uses: pnpm/action-setup@v4
         with:
           version: 8
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
-          cache: "pnpm"		
-      - name: Install dependencies
+          cache: "pnpm"
+
+      - name: Install Dependencies
         run: pnpm install --frozen-lockfile
+
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
